Fix paste outside of image boundaries

If paste data does not intersect canvas, the image is pasted
at the center of the canvas.

BUG:459111


(cherry picked from commit e41db7b620a6d8197a44ce7cddb5f16ea59d1878)